--- a/src/VectorMath.csproj
+++ b/src/VectorMath.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile></DocumentationFile>
+    <DocumentationFile>C:\Users\Danniel\Desktop\School\Fall '19\CIS 400\comments\net-comments-dannielchristensen\src\VectorMath.xml</DocumentationFile>
   </PropertyGroup>
 
 </Project>
